force-app/main/default/objects/Directive_Persona__mdt/Directive_Persona__mdt.object-meta.xml
<CustomObject>
    <label>Directive Persona</label>
    <pluralLabel>Directive Personas</pluralLabel>
</CustomObject>