force-app/main/default/objects/Directive_Persona__mdt/fields/Allowed_Actions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Actions__c</fullName>
    <label>Allowed Actions</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>