force-app/main/default/objects/Directive_Persona__mdt/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>